docs/1.6/modules/en/pages/index.adoc
= OS Management for Rancher
:revdate: 2026-06-24
:page-revdate: {revdate}

{elemental-product-name} is a software stack enabling centralized, full cloud-native OS management with Kubernetes.

xref:release-notes.adoc[**Latest Release: v1.6.11**]

The {elemental-product-name} Stack consists of a handful of packages on top of SLE Micro:

* *elemental-toolkit* - Includes a set of OS utilities to enable OS management via containers. Includes dracut modules, bootloader configuration, cloud-init style configuration services, etc.
* *elemental-operator* - Connects to Rancher Manager and handles MachineRegistration and MachineInventory CRDs.
* *elemental-register* - Registers machines via machineRegistrations and installs them via elemental-cli.
* *elemental-cli* - Installs any elemental-toolkit based derivative. Basically an installer based on our A/B install and upgrade system.
* *rancher-system-agent* - Runs on the installed system and gets instructions ("Plans") from Rancher Manager what to install and run on the system.

Cluster Node OSes are built and maintained via container images through the {elemental_cli_name} and they can be installed on new hosts using the {elemental_ui_url}[{elemental_ui_name}] for https://www.rancher.com/products/rancher[Rancher Manager] or the {elemental_cli_url}[{elemental_cli_name}].

The {elemental_operator_url}[{elemental_operator_name}] and the {ranchersystemagent_url}[{ranchersystemagent_name}] enable Rancher Manager to fully control {elemental-product-name} clusters, from the installation and management of the OS on the Nodes to the provisioning of new K3s or RKE2 clusters in a centralized way.

== {elemental-product-name} on x86-64 hardware

{elemental-product-name} is production ready and fully supported on x86-64 starting with Rancher v2.7.0.

== {elemental-product-name} on ARM hardware

ARM (aarch64) is functional in the development stage. ARM is currently only tested on Raspberry Pi 4 Model B with k3s 1.24.8 (or later). Feedback is welcome.

== {elemental-product-name} on other hardware

{elemental-product-name} is currently targeting 'edge' scenarios and does therefore not support other hardware. We will re-assess this as the market evolves.

== Ready to give it a try?

Get an {elemental-product-name} Cluster up and running with your preferred method

* With Rancher manager xref:quickstart-ui.adoc[{elemental-product-name} plugin]
* With the xref:quickstart-cli.adoc[{elemental-product-name} CLI]

[NOTE]
.What's next?
====
Want more details? Take a look at the xref:architecture.adoc[Architecture] section or reach out to the {elemental_slack_url}[{elemental_slack_name}].
====

